src/main.css
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  font-family: 'DM Sans', sans-serif;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after {
  content: '';
  content: none;
}
q:before,
q:after {
  content: '';
  content: none;
}
header,
main,
footer {
  width: 100%;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
* {
  box-sizing: border-box;
}
*:after,
*:before {
  box-sizing: border-box;
}
h1,
h2,
h3,
h4,
h5,
h6,
p,
li,
a,
div,
ul,
input,
blockquote,
span,
button,
i,
b,
em,
strong {
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-decoration: none;
}
img {
  max-width: 100%;
  height: auto;
}
i,
em {
  font-style: italic;
}
b,
strong {
  font-weight: bold;
}
body {
  overflow-x: hidden;
  position: relative;
}

html,
body {
  width: 370px;
  min-height: 600px;
  padding: 0;
  margin: 0;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  outline-color: #01b86c;
}

#extension-root {
  height: 100%;
}

.c-pointer {
  cursor: pointer;
}

.input-correct {
  border: 1px solid green !important;
}

.input-incorrect {
  border: 1px solid red !important;
}

@keyframes fadeOut {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

.splash-screen-icon {
  animation: fadeOut 0.4s ease-in-out 1s forwards;
}

.dropdown-body {
  transform: translateY(-10px);
  transition: transform 0.2s ease-in-out;
  visibility: hidden;
  opacity: 0;
}

.dropdown-transition {
  visibility: visible;
  transform: translateY(0);
  opacity: 1;
}

#scrollable-container {
  height: 100vh;
  overflow-y: auto;
  overflow-x: hidden;
  width: 370px;
  max-width: 370px;
}

.main-container {
  width: 370px;
}

.dialog-wrapper {
  max-width: 370px;
}

.tippy-box[data-theme*='ark'] {
  border-radius: 8px;
}

.tippy-box[data-theme*='ark'] .tippy-content {
  padding: 8px 12px;
}

.tippy-box[data-theme~='ark-light'] {
  background-color: #383838;
  color: #fff;
}

.tippy-box[data-theme~='ark-dark'] {
  background-color: #fff;
  color: #383838;
}

.tippy-box[data-theme~='ark-light'] .tippy-svg-arrow {
  fill: #383838;
}

.tippy-box[data-theme~='ark-dark'] .tippy-svg-arrow {
  fill: #fff;
}

.globeIcon.dark circle {
  stroke: #3b3b3b;
}

.dialog-bg .globeIcon.dark circle {
  stroke: #2e2e2e;
}

@-moz-document url-prefix() {
  .custom-scroll {
    scrollbar-width: thin;
    scrollbar-color: #058751 transparent;
  }

  .custom-scroll::-webkit-scrollbar-thumb {
    background-color: #058751;
  }

  .custom-scroll::-webkit-scrollbar-track {
    background-color: transparent;
  }
}

.custom-scroll::-webkit-scrollbar {
  width: 4px;
}

.custom-scroll::-webkit-scrollbar-thumb {
  border-radius: 50px;
  background: #058751;
}

